fix: canvas graph

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1 align="center">Chart Data on Hydra growth per service</h1>
 <div style="height: 100vh; width: 100vw; max-height: 100vh;max-width: 100vw;">
-    <canvas id="myChart" width="400" height="400"></canvas>
+    <canvas style="background-color:#ffffff;" id="myChart" width="400" height="400"></canvas>
 </div>
 
 <script>
